# my

./: .gitignore  README.MD
god/: export_presets.cfg  ferris.svg.import  icon.svg.import  my-extension.gdextension  my-extension.gdextension.uid  project.godot
god/AssetBundle/: HarmonyOS_Sans_SC_Regular.ttf.import  Uranus_Pixel_11Px.ttf.import
god/AssetBundle/Audio/: BGM.ogg.import  EnemyDeath.mp3.import  GameOver.mp3.import  Gun.mp3.import  Running.mp3.import
god/AssetBundle/Sprites/: Bullet.png.import  ForestBackground.png.import  Foxy.png.import  Slimer.png.import  SlimerDeath.png.import
god/Scenes/: Main.tscn  Player.tscn  bullet.tscn  monster.tscn
rs/: Cargo.toml
rs/src/: bullet.rs  game.rs  game_manager.rs  lib.rs  monster.rs  player.rs
